<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <android.support.v7.preference.SwitchPreferenceCompat
        android:defaultValue="false"
        android:key="switch_preference_1"
        android:title="@string/switchtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        />

    <EditTextPreference
        android:defaultValue="Default value"
        android:key="edit_text_preference_question"
        android:selectAllOnFocus="true"
        android:singleLine="false"
        android:title="@string/edittextquestion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"/>
    <EditTextPreference
        android:defaultValue="Default value"
        android:key="edit_text_preference_1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/edittextanswer1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"/>
    <EditTextPreference
        android:defaultValue="Default value"
        android:key="edit_text_preference_2"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/edittextanswer2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"/>
    <EditTextPreference
        android:defaultValue="Default value"
        android:key="edit_text_preference_3"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/edittextanswer3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"/>
    <EditTextPreference
        android:defaultValue="Default value"
        android:key="edit_text_preference_4"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/edittextfilename"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"/>
    <Preference
        android:title="Apply Changes"
        android:key="@string/apply_Button"
        android:summary="Applies all settings and returns to chosen screen" />
</PreferenceScreen>